# python-project-lvl3

./: .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  hexlet-check.yml
page_loader/: __init__.py  cli.py  client.py  html.py  html_handlers.py  loader.py  log_settings.py  logging.py  storage.py  url.py  url_handlers.py
page_loader/parsers/: __init__.py  html_parser.py  img_parser.py  link_parser.py  script_parser.py
page_loader/scripts/: page_loader.py
tests/: test_feature.py  test_loader.py  test_storage.py  test_unit.py  test_url.py
tests/fixtures/: empty.html  style.css  style2.css  test.html
tests/fixtures/expected_html/: test-com-empty.html  test-com-test.html  test-com.html
